--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -4,43 +4,102 @@
     android:layout_height="match_parent"
     android:background="#ff446787">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#ffe1fffc">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100 gold"
+            android:id="@+id/textView2"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:textSize="25dp"/>
 
-    <LinearLayout
-        android:layout_width="385dp"
-        android:layout_height="385dp"
-        android:clickable="false">
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="25dp"
+            android:id="@+id/imageButton3"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageView2"
             android:background="#ffff0a11"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="385dp"
+        android:layout_height="350dp"
+        android:clickable="false"
+        android:layout_marginTop="0dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:id="@+id/imageView2"
+            android:background="#ffff0a11"
+            android:layout_margin="5dp"
+/>
 
 
         <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
         android:id="@+id/imageView"
         android:background="#ff0512ff"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:adjustViewBounds="false"
-            android:layout_margin="0dp" />
+            android:adjustViewBounds="false"
+            android:baselineAlignBottom="false"
+            android:layout_below="@+id/imageView2"
+            android:layout_toRightOf="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageView2"
+            android:layout_margin="5dp"
+  />
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:id="@+id/imageView3"
             android:background="#ffff23ce"
-            android:adjustViewBounds="false" />
+            android:adjustViewBounds="false"
+            android:baselineAlignBottom="false"
+            android:clickable="false"
+            android:layout_below="@+id/imageView2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="5dp"
+           />
 
         <ImageView
-            android:layout_width="151dp"
-            android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:id="@+id/imageView4"
-            android:background="#ff10ff12"/>
+            android:background="#ff10ff12"
+            android:layout_gravity="bottom"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageView2"
+            android:layout_margin="5dp"/>
 
 
-    </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        >
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/imageButton4"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="#fffcda1a"/>
+    </RelativeLayout>
+
 </LinearLayout>
