--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -31,24 +31,24 @@
 
     <RelativeLayout
         android:layout_width="385dp"
-        android:layout_height="350dp"
+        android:layout_height="330dp"
         android:clickable="false"
         android:layout_marginTop="0dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp">
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:id="@+id/imageView2"
             android:background="#ffff0a11"
-            android:layout_margin="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
 />
 
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
         android:id="@+id/imageView"
         android:background="#ff0512ff"
             android:adjustViewBounds="false"
@@ -60,8 +60,8 @@
   />
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:id="@+id/imageView3"
             android:background="#ffff23ce"
             android:adjustViewBounds="false"
@@ -74,8 +74,8 @@
            />
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:id="@+id/imageView4"
             android:background="#ff10ff12"
             android:layout_gravity="bottom"
@@ -86,28 +86,246 @@
 
 
     </RelativeLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:gravity="center"
+    >
+
+    <ImageButton
+    android:layout_width="32dp"
+    android:layout_height="32dp"
+    android:id="@+id/imageButton16"
+    android:background="#ffffffff" />
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton17"
+        android:background="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton16"
+        android:layout_toEndOf="@+id/imageButton16"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton18"
+        android:background="#ffffffff"
+        android:layout_alignTop="@+id/imageButton17"
+        android:layout_toRightOf="@+id/imageButton17"
+        android:layout_toEndOf="@+id/imageButton17"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton19"
+        android:background="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton18"
+        android:layout_toEndOf="@+id/imageButton18"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton20"
+        android:background="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton19"
+        android:layout_toEndOf="@+id/imageButton19"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton21"
+        android:background="#ffffffff"
+        android:layout_alignTop="@+id/imageButton20"
+        android:layout_toRightOf="@+id/imageButton20"
+        android:layout_toEndOf="@+id/imageButton20"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton22"
+        android:background="#ffffffff"
+        android:layout_alignTop="@+id/imageButton21"
+        android:layout_toRightOf="@+id/imageButton21"
+        android:layout_toEndOf="@+id/imageButton21"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton23"
+        android:background="#ffffffff"
+        android:layout_alignTop="@+id/imageButton22"
+        android:layout_toRightOf="@+id/imageButton22"
+        android:layout_toEndOf="@+id/imageButton22"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton24"
+        android:background="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButton23"
+        android:layout_toEndOf="@+id/imageButton23"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageButton
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/imageButton25"
+        android:background="#ffffffff"
+        android:layout_toRightOf="@+id/imageButton24"
+        android:layout_toEndOf="@+id/imageButton24"
+        android:layout_marginLeft="5dp"
+        />
+
+</RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:gravity="center"
         >
 
         <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/imageButton4"
-            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="#fffcda1a"/>
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton18"
-            android:layout_alignParentBottom="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton"
+            android:background="#fffcda1a"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/imageButton4"
             android:layout_toEndOf="@+id/imageButton4" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton2"
+            android:background="#fffcda1a"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/imageButton"
+            android:layout_toEndOf="@+id/imageButton" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton5"
+            android:background="#fffcda1a"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/imageButton2"
+            android:layout_toEndOf="@+id/imageButton2" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton6"
+            android:background="#fffcda1a"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/imageButton5"
+            android:layout_toEndOf="@+id/imageButton5" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton7"
+            android:layout_marginLeft="5dp"
+            android:background="#fffcda1a"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageButton6"
+            android:layout_toEndOf="@+id/imageButton6"
+             />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton8"
+            android:background="#fffc0628"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/imageButton7"
+            android:layout_toEndOf="@+id/imageButton7" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton9"
+            android:background="#fffcda1a"
+
+            android:layout_toLeftOf="@+id/imageButton"
+            android:layout_toStartOf="@+id/imageButton"
+            android:layout_marginTop="45dp"/>
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton10"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton9"
+            android:layout_toLeftOf="@+id/imageButton2"
+            android:layout_toStartOf="@+id/imageButton2" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton11"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton10"
+            android:layout_toLeftOf="@+id/imageButton5"
+            android:layout_toStartOf="@+id/imageButton5" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton12"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton11"
+            android:layout_toLeftOf="@+id/imageButton6"
+            android:layout_toStartOf="@+id/imageButton6" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton13"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton12"
+            android:layout_alignLeft="@+id/imageButton6"
+            android:layout_alignStart="@+id/imageButton6" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton14"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton13"
+            android:layout_toLeftOf="@+id/imageButton8"
+            android:layout_toStartOf="@+id/imageButton8" />
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imageButton15"
+            android:background="#fffcda1a"
+            android:layout_alignTop="@+id/imageButton14"
+            android:layout_alignLeft="@+id/imageButton8"
+            android:layout_alignStart="@+id/imageButton8" />
+
     </RelativeLayout>
 
 </LinearLayout>
