--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -22,18 +22,22 @@
         android:layout_height="wrap_content"
         android:text="магазин"
         android:id="@+id/button"
-        android:layout_below="@+id/imageButtonPlay"
-        android:layout_alignLeft="@+id/imageButtonPlay"
-        android:layout_alignStart="@+id/imageButtonPlay" />
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="48dp"
+        android:layout_marginStart="48dp" />
 
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="о нас"
         android:id="@+id/button2"
-        android:layout_below="@+id/imageButtonPlay"
-        android:layout_alignRight="@+id/imageButtonPlay"
-        android:layout_alignEnd="@+id/imageButtonPlay" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp" />
 
 
 </RelativeLayout>
