--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,7 +7,11 @@
     android:background="@drawable/fon1">
 
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="30dp">
 
+    </RelativeLayout>
     <Button
         android:layout_width="110dp"
         android:layout_height="wrap_content"
@@ -34,7 +38,9 @@
         android:background="@drawable/kv4"
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="50dp"
+/>
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
