--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -81,7 +81,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="#fffcda1a"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="40dp"
@@ -91,7 +91,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -101,7 +101,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -111,7 +111,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -121,7 +121,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -132,7 +132,7 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
-            android:onClick="onClick"
+            android:onClick="onClickActualLetter"
              />
 
         <Button
@@ -143,7 +143,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -154,7 +154,7 @@
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="45dp"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="40dp"
@@ -164,7 +164,7 @@
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -174,7 +174,7 @@
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -184,7 +184,7 @@
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -194,7 +194,7 @@
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -204,7 +204,7 @@
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="40dp"
@@ -214,7 +214,7 @@
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
     </RelativeLayout>
 
