--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="#ffe1fffc">
+        android:background="#ffe1fffc"
+        android:id="@+id/header_panel">
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,6 +38,27 @@
             android:id="@+id/textViewCurLevel"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:id="@+id/nextLevel"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:onClick="NextLevelClick"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:id="@+id/prevLevel"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/textViewCurLevel"
+            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:onClick="PrevLevelClick"/>
     </RelativeLayout>
 
     <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="350dp">
