--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -37,6 +37,27 @@
             android:id="@+id/textViewCurLevel"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:id="@+id/nextLevel"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:onClick="NextLevelClick"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:id="@+id/prevLevel"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/textViewCurLevel"
+            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:onClick="PrevLevelClick"/>
     </RelativeLayout>
 
     <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="550dp">
@@ -83,7 +104,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="#fffcda1a"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
@@ -93,7 +114,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -103,7 +124,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -113,7 +134,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -123,7 +144,7 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -134,7 +155,7 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
-            android:onClick="onClick"
+            android:onClick="onClickActualLetter"
             />
 
         <Button
@@ -156,7 +177,7 @@
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="65dp"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
@@ -166,7 +187,7 @@
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -176,7 +197,7 @@
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -186,7 +207,7 @@
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -196,7 +217,7 @@
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -206,7 +227,7 @@
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="60dp"
@@ -216,7 +237,7 @@
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
     </RelativeLayout>
 
