--- a/app/src/main/res/drawable/btnanim.xml
+++ b/app/src/main/res/drawable/btnanim.xml
@@ -1,6 +1,11 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loading"
     android:oneshot="false" >
-    <item android:drawable="@drawable/playbtn" android:duration="300"/>
-    <item android:drawable="@drawable/playbtn_pressed" android:duration="300"/>
+    <item android:drawable="@drawable/btn1" android:duration="30"/>
+    <item android:drawable="@drawable/btn2" android:duration="30"/>
+    <item android:drawable="@drawable/btn3" android:duration="30"/>
+    <item android:drawable="@drawable/btn4" android:duration="30"/>
+    <item android:drawable="@drawable/btn5" android:duration="30"/>
+    <item android:drawable="@drawable/btn6" android:duration="30"/>
+    <item android:drawable="@drawable/btn7" android:duration="30"/>
 </animation-list>
