--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fon2"
+    android:background="@drawable/fon1"
     android:id="@+id/rootLayout">
 
     <RelativeLayout
@@ -37,21 +37,42 @@
             android:id="@+id/textViewCurLevel"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:id="@+id/nextLevel"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:onClick="NextLevelClick"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:id="@+id/prevLevel"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/textViewCurLevel"
+            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:onClick="PrevLevelClick"/>
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="550dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="710dp">
         <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
                          zoom in to show more detail. All of the zooming and animation logic is in
                          the ZoomActivity class.
             -->
-            <RelativeLayout android:layout_width="530dp" android:layout_height="530dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff0512ff" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:background="#ff0512ff" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ffff23ce" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff10ff12" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="530dp" android:layout_height="530dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="3dp" android:background="#ff10ff12"/>
+            <RelativeLayout android:layout_width="700dp" android:layout_height="700dp" android:layout_centerHorizontal="true">
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff000000" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:background="#ff000000" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff000000" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff000000" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="700dp" android:layout_height="700dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="5dp" android:background="#ff10ff12"/>
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
@@ -71,13 +92,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:gravity="center"
         >
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter0"
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
@@ -86,8 +107,8 @@
             android:onClick="onClick"/>
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter1"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
@@ -96,8 +117,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter2"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
@@ -106,8 +127,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter3"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
@@ -116,8 +137,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter4"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
@@ -126,8 +147,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter5"
             android:layout_marginLeft="5dp"
             android:background="#fffcda1a"
@@ -138,8 +159,8 @@
             />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/imageButton8"
             android:background="#fffc0628"
             android:layout_marginLeft="5dp"
@@ -148,19 +169,19 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter6"
             android:background="#fffcda1a"
 
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="95dp"
             android:onClick="onClick"/>
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter7"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter6"
@@ -169,8 +190,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter8"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter7"
@@ -179,8 +200,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter9"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter8"
@@ -189,8 +210,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter10"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter9"
@@ -199,8 +220,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter11"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter10"
@@ -209,8 +230,8 @@
             android:onClick="onClick" />
 
         <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:id="@+id/buttonLetter12"
             android:background="#fffcda1a"
             android:layout_alignTop="@+id/buttonLetter11"
