--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fon2"
+    android:background="@drawable/fon1"
     android:id="@+id/rootLayout">
 
     <RelativeLayout
@@ -69,11 +69,18 @@
                          the ZoomActivity class.
             -->
             <AbsoluteLayout android:layout_width="330dp" android:layout_height="330dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff0512ff" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff0512ff" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ffff23ce" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff10ff12" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="wrap_content" android:layout_height="330dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="3dp" android:background="#ff10ff12"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff000000" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff000000" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff000000" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff000000" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image"
+                    android:layout_width="match_parent" android:layout_height="match_parent"
+                    android:visibility="invisible"
+                    android:layout_centerInParent="true"
+                    android:layout_x="0dp"
+                    android:layout_y="0dp"
+                    android:background="#ff000000"
+                    android:padding="5dp"/>
             </AbsoluteLayout>
         </LinearLayout>
     </RelativeLayout>
@@ -102,14 +109,14 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter1"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
@@ -119,7 +126,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter2"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
@@ -129,7 +136,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter3"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
@@ -139,7 +146,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter4"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
@@ -150,7 +157,7 @@
             android:layout_height="40dp"
             android:id="@+id/buttonLetter5"
             android:layout_marginLeft="5dp"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -171,7 +178,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter6"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
 
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
@@ -182,7 +189,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter7"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -192,7 +199,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter8"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -202,7 +209,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter9"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -212,7 +219,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter10"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -222,7 +229,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/buttonLetter11"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -231,8 +238,9 @@
         <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:textColor="#ffffffff"
             android:id="@+id/buttonLetter12"
-            android:background="#fffcda1a"
+            android:background="#ff8144"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
