--- a/app/src/main/res/layout/hints.xml
+++ b/app/src/main/res/layout/hints.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:alpha="0.0"></RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="250dp"
+        android:layout_height="345dp"
+        android:background="@drawable/bestbuy"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="Подсказки"
         android:id="@+id/textView5"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#ffffff"
         android:textSize="26dp" />
 
     <Button
@@ -16,19 +30,29 @@
         android:layout_height="wrap_content"
         android:text="New Button"
         android:id="@+id/btnClose"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Открыть букву"
         android:id="@+id/btnOpenLetter"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/btnOpenWord"
+        android:layout_alignLeft="@+id/btnOpenWord"
+        android:layout_alignStart="@+id/btnOpenWord" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Открыть слово"
         android:id="@+id/btnOpenWord"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/btnClose"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
+
+</RelativeLayout>
