--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,17 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+
 
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/fonmenu"
-    >
+    android:background="@drawable/fonnew"
+    android:id="@+id/rootLayoutMain">
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/top"/>
+
 
 
     <ImageView
@@ -33,7 +30,8 @@
         android:layout_alignStart="@+id/imageButtonPlay"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/istore"/>
+        android:background="@drawable/istore"
+        android:onClick="ShowGameshopPopUp"/>
 
     <ImageView
         android:layout_width="50dp"
@@ -43,6 +41,7 @@
         android:layout_alignRight="@+id/imageButtonPlay"
         android:layout_alignEnd="@+id/imageButtonPlay"
         android:layout_marginRight="10dp"
+        android:onClick="ShowAboutPopUp"
         android:background="@drawable/infa"/>
 
 
