Выгрузка слова и картинок по id

--- a/app/src/main/res/layout/win.xml
+++ b/app/src/main/res/layout/win.xml
@@ -42,7 +42,7 @@
             android:layout_marginTop="15dp"
             android:layout_below="@+id/textView4"
             android:layout_centerHorizontal="true"
-            android:id="@+id/textView5" />
+            android:id="@+id/guessWordTextView" />
 
         <TextView
             android:layout_width="wrap_content"
