займаюсь баловством з мейн актівіті)

--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -2,40 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fonnew"
+    android:background="@drawable/fullfon"
     android:id="@+id/rootLayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="#ffe1fffc"
+        android:layout_height="35dp"
         android:id="@+id/header_panel">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100 gold"
-            android:id="@+id/textView2"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="25dp"
-            android:textColor="#151554"/>
+        <RelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:background="@drawable/coni"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:alpha="0.7"
+                android:id="@+id/textView2"
+                android:layout_centerVertical="true"
+                android:textSize="18sp"
+                android:layout_marginRight="5dp"
+                android:textColor="#ffffffff"
+                android:layout_toLeftOf="@+id/imageView"/>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/coin"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/imageView"
+                android:layout_marginRight="5dp"/>
+
+            </RelativeLayout>
+
+
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="25dp"
+            android:layout_width="28dp"
+            android:layout_height="22dp"
             android:id="@+id/imageButton3"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-
-            android:background="#ffff0a11"/>
+            android:layout_marginLeft="10dp"
+            android:alpha="0.7"
+            android:background="@drawable/arr"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="#ffffffff"
+            android:textSize="25sp"
             android:id="@+id/textViewCurLevel"
+            android:alpha="0.7"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
@@ -189,12 +212,12 @@
             android:layout_height="40dp"
             android:id="@+id/imageButton8"
             android:textColor="#ffffffff"
-            android:background="#ffffff"
+            android:background="#ff1ed448"
             android:textSize="30dp"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
-            android:onClick="onClickActualLetter"
+            android:onClick="ShowHintsPopUp"
             android:text="\?"/>
 
         <Button
