--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,7 +4,7 @@
 
 
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/fonnew"
+    android:background="@drawable/fullfon"
     android:id="@+id/rootLayoutMain">
 
 
