Выгрузка слова и картинок по id

--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100 gold"
-            android:id="@+id/textView2"
+            android:id="@+id/textViewGold"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
